# virtual_costmap_layer

./: .clang-format  CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
cfg/: VirtualLayer.cfg  banner
cmake_modules/: debug.cmake  declarations.cmake  dependencies.cmake  global.cmake
include/virtual_costmap_layer/: VirtualLayer.h  geometries.hpp  tessellator.hpp  version.hpp.in  virtual_layer.hpp
launch/: sample.launch
msg/: Circle.msg  Form.msg  Obstacles.msg  Polygon.msg  Zone.msg
samples/map/: map.pgm  map.yaml
samples/move_base/: common_params.yaml  global_params.yaml  local_params.yaml
samples/rviz/: sample.rviz
src/: VirtualLayer.cpp  tessellator.cpp  version.cpp  virtual_layer.cpp
srv/: AddElement.srv  GetElement.srv  GetElements.srv  RemoveElement.srv
